    * Radau5 C with SuperLU now requires compilation with '-D__RADAU5_WITH_SUPERLU'
    * Refactored Radau5 C implementation; moved to thirdparts/radau5/.
    * Replaced event localization for explicit problems with an equivalent C implementation.
    * Added missing counts on event indicator evaluations when setting problem data in solvers.

--- Assimulo-3.3.1 ---
    * Minor refactoring of Radau5 C implementation:
      Now uses actual return value to return error codes. idid is return of solout callback.
    * Separate fortran from C flags in setup.py
    * Changed "numpy.bool" to equivalent "bool" due to DeprecationWarnings for numpy >= 1.20.

--- Assimulo-3.3 ---
    * Sundials 6.x port
    * Radau5ODE and Radau5DAE now correctly terminate from unrecoverable errors in right-hand side and Jacobian calls.
    * Added support for sparse LU decompositions (via SuperLU) in Radau5 solver. 
      This is only available with the C version of the Radau5 solver.
    * Changed attribute name Radau5ODE.solver to Radau5ODE.implementation.
      Removed support for Radau5DAE.implementation = 'c'
    * Removed unused functionality from Radau5 C implementation: DAEs, 2nd order eq, banded matrix structures.

--- Assimulo-3.2.9 ---
    * Bugfix for C version of Radau5 solver

--- Assimulo-3.2.8 ---
    * Sundials 5.x port
    * Improved asserts in tests
    * Added C version of the Radau5 solver

--- Assimulo-3.2.7 ---
    * Resolved deprecation warnings visible when using numpy 1.20.
    * Resolved deprecation warnings visible when creating an ndarray from ragged nested sequences.

--- Assimulo-3.2.6 --
    * Fixed some tests that were not compatible with Python 3.

--- Assimulo-3.2.5 --
    * Added so that additional Fortran compile flags can be provided
      during setup.
    * Fixed minor issue that caused exceptions during setup when
      Sundials was not found.

--- Assimulo-3.2.4 --
    * Fixed issue with LSODAR (when being extended as a Cython problem)
